compile failure on Solaris: server_options.cpp: "facilitynames was not declared in this scope"

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One of the rare failures I've seen where MCI has pinpointed the offending commit.

      b2f87f53245b Solaris 64-bit compile

      [2013/10/12 21:47:34.159] src/mongo/db/server_options.cpp: In function 'mongo::Status mongo::storeServerOptions(const mongo::optionenvironment::Environment&, const std::vector<std::basic_string<char> >&)':
      [2013/10/12 21:47:34.159] src/mongo/db/server_options.cpp:510:50: error: 'facilitynames' was not declared in this scope
      [2013/10/12 21:47:34.532] scons: *** [build/sunos5/64/cxx__opt_gcc-4.6.3_bin_g++/release/mongo/db/server_options.o] Error 1
      

      First failure is precisely:

      0ffa31cb9e1f Solaris 64-bit compile
      commit: SERVER-7454 add syslogFacility flag to specify syslog facility

      Immediately preceding commit was green.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Matt Kangas (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: