SERVER-11160 detect missing facilitynames in platform agnostic manner